--- a/OneDo.Model/OneDo.Model.csproj
+++ b/OneDo.Model/OneDo.Model.csproj
@@ -107,7 +107,16 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Recurrences\DailyRecurrence.cs" />
+    <Compile Include="Data.cs" />
+    <Compile Include="Recurrences\DaysOfWeek.cs" />
+    <Compile Include="Recurrences\MonthlyRecurrence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recurrences\RecurrenceBase.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="Tag.cs" />
+    <Compile Include="Todo.cs" />
+    <Compile Include="Recurrences\WeeklyRecurrence.cs" />
     <EmbeddedResource Include="Properties\OneDo.Model.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
