--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -96,6 +96,9 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Common\IO\FileHelper.cs" />
+    <Compile Include="Converters\ChangeTypeConverter.cs" />
+    <Compile Include="Converters\StringFormatConverter.cs" />
+    <Compile Include="Converters\ConditionConverter.cs" />
     <Compile Include="Services\DataService\DataService.cs" />
     <Compile Include="Services\DataService\DesignDataService.cs" />
     <Compile Include="Services\DataService\IDataService.cs" />
@@ -150,7 +153,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controls\" />
-    <Folder Include="Converters\" />
     <Folder Include="Styles\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
