--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -95,6 +95,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Common\Event\HandledEventArgs.cs" />
     <Compile Include="Common\IO\FileHelper.cs" />
     <Compile Include="Converters\ChangeTypeConverter.cs" />
     <Compile Include="Converters\StringFormatConverter.cs" />
@@ -102,6 +103,11 @@
     <Compile Include="Services\DataService\DataService.cs" />
     <Compile Include="Services\DataService\DesignDataService.cs" />
     <Compile Include="Services\DataService\IDataService.cs" />
+    <Compile Include="Services\NavigationService\BackButtonEventArgs.cs" />
+    <Compile Include="Services\NavigationService\INavigable.cs" />
+    <Compile Include="Services\NavigationService\INavigationService.cs" />
+    <Compile Include="Services\NavigationService\NavigatingEventArgs.cs" />
+    <Compile Include="Services\NavigationService\ShellNavigationService.cs" />
     <Compile Include="View\Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
