--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -112,7 +112,7 @@
     <Compile Include="Services\NavigationService\INavigationService.cs" />
     <Compile Include="Services\NavigationService\NavigatingEventArgs.cs" />
     <Compile Include="Services\NavigationService\ShellNavigationService.cs" />
-    <Compile Include="ViewModel\PageViewModelBase.cs" />
+    <Compile Include="ViewModel\BasePageViewModel.cs" />
     <Compile Include="View\Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
