--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Services\NavigationService\NavigatingEventArgs.cs" />
     <Compile Include="Services\NavigationService\ShellNavigationService.cs" />
     <Compile Include="ViewModel\BasePageViewModel.cs" />
+	<Compile Include="ViewModel\Commands\NavigationCommand.cs" />
     <Compile Include="View\Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
