--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -114,6 +114,10 @@
     <Compile Include="Services\NavigationService\ShellNavigationService.cs" />
     <Compile Include="ViewModel\BasePageViewModel.cs" />
 	<Compile Include="ViewModel\Commands\NavigationCommand.cs" />
+    <Compile Include="ViewModel\Pages\AboutPageViewModel.cs" />
+    <Compile Include="View\Pages\AboutPage.xaml.cs">
+      <DependentUpon>AboutPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -149,6 +153,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="View\Pages\AboutPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="View\Pages\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
