--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -97,6 +97,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Behaviors\TitleBarBehavior.cs" />
     <Compile Include="Common\Event\HandledEventArgs.cs" />
     <Compile Include="Common\IO\FileHelper.cs" />
     <Compile Include="Common\MVVM\BaseCommand.cs" />
