--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -109,7 +109,7 @@
     <Compile Include="Converters\StringFormatConverter.cs" />
     <Compile Include="Converters\ConditionConverter.cs" />
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Services\DataService\DataService.cs" />
+    <Compile Include="Services\DataService\FileDataService.cs" />
     <Compile Include="Services\DataService\DesignDataService.cs" />
     <Compile Include="Services\DataService\IDataService.cs" />
     <Compile Include="Services\FileService\FileService.cs" />
