--- a/OneDo.Model/OneDo.Model.csproj
+++ b/OneDo.Model/OneDo.Model.csproj
@@ -107,17 +107,20 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Recurrences\DailyRecurrence.cs" />
+    <Compile Include="Entity\Recurrences\DailyRecurrence.cs" />
     <Compile Include="Data.cs" />
-    <Compile Include="Recurrences\DaysOfWeek.cs" />
-    <Compile Include="Recurrences\MonthlyRecurrence.cs" />
+    <Compile Include="Entity\Recurrences\DaysOfWeek.cs" />
+    <Compile Include="Entity\Recurrences\MonthlyRecurrence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Recurrences\RecurrenceBase.cs" />
-    <Compile Include="Settings.cs" />
-    <Compile Include="Tag.cs" />
-    <Compile Include="Todo.cs" />
-    <Compile Include="Recurrences\WeeklyRecurrence.cs" />
+    <Compile Include="Entity\Recurrences\RecurrenceBase.cs" />
+    <Compile Include="Entity\Settings.cs" />
+    <Compile Include="Entity\Tag.cs" />
+    <Compile Include="Entity\Todo.cs" />
+    <Compile Include="Entity\Recurrences\WeeklyRecurrence.cs" />
     <EmbeddedResource Include="Properties\OneDo.Model.rd.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Business\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
