--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -122,7 +122,7 @@
     <Compile Include="Services\NavigationService\INavigable.cs" />
     <Compile Include="Services\NavigationService\INavigationService.cs" />
     <Compile Include="Services\NavigationService\NavigatingEventArgs.cs" />
-    <Compile Include="Services\NavigationService\ShellNavigationService.cs" />
+    <Compile Include="Services\NavigationService\FrameNavigationService.cs" />
     <Compile Include="ViewModel\SettingsViewModel.cs" />
     <Compile Include="ViewModel\PageViewModel.cs" />
     <Compile Include="ViewModel\AboutViewModel.cs" />
