Přejmenován BaseCommand na CommandBase a přesunut do ViewModel/Commands.

--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -100,7 +100,7 @@
     <Compile Include="Behaviors\TitleBarBehavior.cs" />
     <Compile Include="Common\Event\HandledEventArgs.cs" />
     <Compile Include="Common\IO\FileHelper.cs" />
-    <Compile Include="Common\MVVM\BaseCommand.cs" />
+    <Compile Include="ViewModel\Commands\CommandBase.cs" />
     <Compile Include="Controls\HamburgerMenuButton.cs" />
     <Compile Include="Controls\HamburgerTitleBar.cs" />
     <Compile Include="Controls\ExtendedSplitView.cs" />
@@ -209,9 +209,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModel\Commands\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\OneDo.Model\OneDo.Model.csproj">
       <Project>{74631ad1-d01e-4bc4-970c-8e3a0c8c012e}</Project>
