--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -98,6 +98,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Behaviors\TitleBarBehavior.cs" />
+    <Compile Include="Common\Event\CancelEventArgs.cs" />
     <Compile Include="Common\Event\HandledEventArgs.cs" />
     <Compile Include="Common\IO\FileHelper.cs" />
     <Compile Include="ViewModel\Commands\CommandBase.cs" />
