--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -100,7 +100,6 @@
     <Compile Include="Behaviors\TitleBarBehavior.cs" />
     <Compile Include="Common\Event\CancelEventArgs.cs" />
     <Compile Include="Common\Event\HandledEventArgs.cs" />
-    <Compile Include="Common\IO\FileHelper.cs" />
     <Compile Include="ViewModel\Commands\CommandBase.cs" />
     <Compile Include="Controls\HamburgerMenuButton.cs" />
     <Compile Include="Controls\HamburgerTitleBar.cs" />
@@ -115,10 +114,6 @@
     <Compile Include="Services\DataService\IDataService.cs" />
     <Compile Include="Services\FileService\FileService.cs" />
     <Compile Include="Services\FileService\IFileService.cs" />
-    <Compile Include="Common\Logging\DebugLogger.cs" />
-    <Compile Include="Common\Logging\ILogger.cs" />
-    <Compile Include="Common\Logging\Logger.cs" />
-    <Compile Include="Common\Logging\NullLogger.cs" />
     <Compile Include="Services\NavigationService\BackButtonEventArgs.cs" />
     <Compile Include="Services\NavigationService\INavigable.cs" />
     <Compile Include="Services\NavigationService\INavigationService.cs" />
@@ -212,6 +207,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\OneDo.Common\OneDo.Common.csproj">
+      <Project>{bb75f101-ea41-4830-a0ab-d84dc2e3fba3}</Project>
+      <Name>OneDo.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OneDo.Model\OneDo.Model.csproj">
       <Project>{74631ad1-d01e-4bc4-970c-8e3a0c8c012e}</Project>
       <Name>OneDo.Model</Name>
