--- a/OneDo.Model/OneDo.Model.csproj
+++ b/OneDo.Model/OneDo.Model.csproj
@@ -109,16 +109,16 @@
   <ItemGroup>
     <Compile Include="DataAccess\Data.cs" />
     <Compile Include="DataAccess\IDataProvider.cs" />
-    <Compile Include="Entity\Recurrences\DailyRecurrence.cs" />
+    <Compile Include="Entities\Recurrences\DailyRecurrence.cs" />
     <Compile Include="DataAccess\DataProvider.cs" />
-    <Compile Include="Entity\Recurrences\DaysOfWeek.cs" />
-    <Compile Include="Entity\Recurrences\MonthlyRecurrence.cs" />
+    <Compile Include="Entities\Recurrences\DaysOfWeek.cs" />
+    <Compile Include="Entities\Recurrences\MonthlyRecurrence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entity\Recurrences\RecurrenceBase.cs" />
-    <Compile Include="Entity\Settings.cs" />
-    <Compile Include="Entity\Tag.cs" />
-    <Compile Include="Entity\Todo.cs" />
-    <Compile Include="Entity\Recurrences\WeeklyRecurrence.cs" />
+    <Compile Include="Entities\Recurrences\RecurrenceBase.cs" />
+    <Compile Include="Entities\Settings.cs" />
+    <Compile Include="Entities\Tag.cs" />
+    <Compile Include="Entities\Todo.cs" />
+    <Compile Include="Entities\Recurrences\WeeklyRecurrence.cs" />
     <EmbeddedResource Include="Properties\OneDo.Model.rd.xml" />
   </ItemGroup>
   <ItemGroup>
