--- a/OneDo.Common/OneDo.Common.csproj
+++ b/OneDo.Common/OneDo.Common.csproj
@@ -107,7 +107,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IO\FileHelper.cs" />
+    <Compile Include="Data\FileHelper.cs" />
     <Compile Include="Logging\DebugLogger.cs" />
     <Compile Include="Logging\FileLogger.cs" />
     <Compile Include="Logging\ILogger.cs" />
