DesignDataProvider pro ViewModelLocator bez kterého nefungoval design-time

--- a/OneDo.Model/OneDo.Model.csproj
+++ b/OneDo.Model/OneDo.Model.csproj
@@ -107,6 +107,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\DesignDataProvider.cs" />
     <Compile Include="Data\IDataProvider.cs" />
     <Compile Include="Data\Objects\Recurrences\DailyRecurrence.cs" />
     <Compile Include="Data\DataProvider.cs" />
