--- a/OneDo.Model/OneDo.Model.csproj
+++ b/OneDo.Model/OneDo.Model.csproj
@@ -107,6 +107,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Business\BusinessBase.cs" />
     <Compile Include="Data\DesignDataProvider.cs" />
     <Compile Include="Data\IDataProvider.cs" />
     <Compile Include="Data\Objects\Recurrences\DailyRecurrence.cs" />
@@ -121,9 +122,7 @@
     <Compile Include="Data\Objects\Recurrences\WeeklyRecurrence.cs" />
     <EmbeddedResource Include="Properties\OneDo.Model.rd.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Business\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\OneDo.Common\OneDo.Common.csproj">
       <Project>{bb75f101-ea41-4830-a0ab-d84dc2e3fba3}</Project>
