--- a/OneDo/project.json
+++ b/OneDo/project.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
-    "MvvmLightLibs": "5.3.0"
+    "MvvmLightLibs": "5.3.0",
+    "SimpleInjector": "3.1.4"
   },
   "frameworks": {
     "uap10.0": {}
