--- a/OneDo.Model/OneDo.Model.csproj
+++ b/OneDo.Model/OneDo.Model.csproj
@@ -108,6 +108,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Business\BusinessBase.cs" />
+    <Compile Include="Business\Validation\IPropertyRule.cs" />
+    <Compile Include="Business\Validation\PropertyRule.cs" />
+    <Compile Include="Business\Validation\Rule.cs" />
     <Compile Include="Business\Validation\TodoValidator.cs" />
     <Compile Include="Business\Validation\Validator.cs" />
     <Compile Include="Data\DesignDataProvider.cs" />
