--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -119,6 +119,8 @@
     <Compile Include="Services\NavigationService\INavigationService.cs" />
     <Compile Include="Services\NavigationService\NavigatingEventArgs.cs" />
     <Compile Include="Services\NavigationService\FrameNavigationService.cs" />
+    <Compile Include="ViewModels\IProperty.cs" />
+    <Compile Include="ViewModels\Property.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\PageViewModel.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
