--- a/OneDo/project.json
+++ b/OneDo/project.json
@@ -1,9 +1,9 @@
 ﻿{
   "dependencies": {
+    "Autofac": "3.5.2",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
-    "MvvmLightLibs": "5.3.0",
-    "SimpleInjector": "3.2.0"
+    "MvvmLightLibs": "5.3.0"
   },
   "frameworks": {
     "uap10.0": {}
