--- a/OneDo.Model/OneDo.Model.csproj
+++ b/OneDo.Model/OneDo.Model.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Business\BusinessBase.cs" />
+    <Compile Include="Business\TodoBusiness.cs" />
     <Compile Include="Business\Validation\Rule.cs" />
     <Compile Include="Business\Validation\TodoValidator.cs" />
     <Compile Include="Business\Validation\Validator.cs" />
