--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -103,12 +103,12 @@
     <Compile Include="Common\Event\CancelEventArgs.cs" />
     <Compile Include="Common\Event\HandledEventArgs.cs" />
     <Compile Include="Common\UI\TreeHelper.cs" />
+    <Compile Include="Controls\SlidableListItem.cs" />
     <Compile Include="Services\Context\Context.cs" />
     <Compile Include="Services\Context\IContext.cs" />
+    <Compile Include="Services\NavigationService\FlyoutCloseType.cs" />
+    <Compile Include="Services\NavigationService\FlyoutClosedEventArgs.cs" />
     <Compile Include="ViewModels\Commands\CommandBase.cs" />
-    <Compile Include="Controls\HamburgerMenuButton.cs" />
-    <Compile Include="Controls\HamburgerTitleBar.cs" />
-    <Compile Include="Controls\ExtendedSplitView.cs" />
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Converters\ChangeTypeConverter.cs" />
     <Compile Include="Converters\StringFormatConverter.cs" />
@@ -122,7 +122,6 @@
     <Compile Include="ViewModels\FlyoutViewModel.cs" />
     <Compile Include="ViewModels\Flyouts\SettingsViewModel.cs" />
     <Compile Include="ViewModels\PageViewModel.cs" />
-    <Compile Include="ViewModels\Flyouts\AboutViewModel.cs" />
     <Compile Include="ViewModels\Items\TodoItemViewModel.cs" />
     <Compile Include="ViewModels\Flyouts\TodoEditorViewModel.cs" />
     <Compile Include="ViewModels\ExtendedViewModel.cs" />
@@ -136,15 +135,15 @@
     <Compile Include="Views\Flyouts\SettingsView.xaml.cs">
       <DependentUpon>SettingsView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\MainPage.xaml.cs">
+    <Compile Include="Views\Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\Pages\MainViewModel.cs" />
     <Compile Include="ViewModels\ViewModelLocator.cs" />
     <Compile Include="Views\PageBase.cs" />
     <Compile Include="Views\IXBind.cs" />
-    <Compile Include="Views\SplashScreenPage.xaml.cs">
+    <Compile Include="Views\Pages\SplashScreenPage.xaml.cs">
       <DependentUpon>SplashScreenPage.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -170,11 +169,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Themes\HamburgerStyles.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Page>
     <Page Include="Themes\Generic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -188,11 +182,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\MainPage.xaml">
+    <Page Include="Views\Pages\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\SplashScreenPage.xaml">
+    <Page Include="Views\Pages\SplashScreenPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
