--- a/OneDo/project.json
+++ b/OneDo/project.json
@@ -1,6 +1,8 @@
 ﻿{
   "dependencies": {
     "Autofac": "3.5.2",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "MvvmLightLibs": "5.3.0"
