--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -90,6 +90,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <None Include="App.config" />
     <None Include="OneDo_StoreKey.pfx" />
     <None Include="project.json" />
   </ItemGroup>
@@ -104,7 +105,6 @@
     <Compile Include="Common\Event\HandledEventArgs.cs" />
     <Compile Include="Common\UI\TreeHelper.cs" />
     <Compile Include="Controls\SlidableListItem.cs" />
-    <Compile Include="ViewModels\Commands\CommandBase.cs" />
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Converters\ChangeTypeConverter.cs" />
     <Compile Include="Converters\StringFormatConverter.cs" />
@@ -115,6 +115,7 @@
     <Compile Include="Services\NavigationService\INavigationService.cs" />
     <Compile Include="Services\NavigationService\NavigatingEventArgs.cs" />
     <Compile Include="Services\NavigationService\NavigationService.cs" />
+    <Compile Include="ViewModels\Commands\AsyncRelayCommand.cs" />
     <Compile Include="ViewModels\FlyoutViewModel.cs" />
     <Compile Include="ViewModels\Flyouts\SettingsViewModel.cs" />
     <Compile Include="ViewModels\PageViewModel.cs" />
@@ -125,7 +126,7 @@
     <Compile Include="Views\FlyoutBase.cs" />
     <Compile Include="Views\FlyoutTemplateSelector.cs" />
     <Compile Include="Views\IView.cs" />
-    <Compile Include="Views\UserControlBase.cs" />
+    <Compile Include="Views\ExtendedUserControl.cs" />
     <Compile Include="Views\Flyouts\TodoEditor.xaml.cs">
       <DependentUpon>TodoEditor.xaml</DependentUpon>
     </Compile>
@@ -138,7 +139,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Pages\MainViewModel.cs" />
     <Compile Include="ViewModels\ViewModelLocator.cs" />
-    <Compile Include="Views\PageBase.cs" />
+    <Compile Include="Views\ExtendedPage.cs" />
     <Compile Include="Views\IXBind.cs" />
     <Compile Include="Views\Pages\SplashScreenPage.xaml.cs">
       <DependentUpon>SplashScreenPage.xaml</DependentUpon>
