--- a/OneDo.Model/OneDo.Model.csproj
+++ b/OneDo.Model/OneDo.Model.csproj
@@ -112,18 +112,19 @@
     <Compile Include="Business\Validation\Rule.cs" />
     <Compile Include="Business\Validation\TodoValidator.cs" />
     <Compile Include="Business\Validation\Validator.cs" />
-    <Compile Include="Data\DataProvider.cs" />
-    <Compile Include="Data\IDataProvider.cs" />
-    <Compile Include="Data\Objects\IModel.cs" />
+    <Compile Include="Data\IEntity.cs" />
     <Compile Include="Data\OneDoContext.cs" />
+    <Compile Include="Data\Settings.cs" />
     <Compile Include="Migrations\20160809175603_Initialize.cs" />
     <Compile Include="Migrations\20160809175603_Initialize.designer.cs">
       <DependentUpon>20160809175603_Initialize.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\OneDoContextModelSnapshot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Data\Objects\Folder.cs" />
-    <Compile Include="Data\Objects\Todo.cs" />
+    <Compile Include="Data\Entities\Folder.cs" />
+    <Compile Include="Data\Entities\Todo.cs" />
+    <Compile Include="Data\ISettingsProvider.cs" />
+    <Compile Include="Data\SettingsProvider.cs" />
     <EmbeddedResource Include="Properties\OneDo.Model.rd.xml" />
   </ItemGroup>
   <ItemGroup />
