--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -116,6 +116,8 @@
     <Compile Include="Services\NavigationService\INavigationService.cs" />
     <Compile Include="Services\NavigationService\NavigatingEventArgs.cs" />
     <Compile Include="Services\NavigationService\NavigationService.cs" />
+    <Compile Include="Services\ProgressService\IProgressService.cs" />
+    <Compile Include="Services\ProgressService\ProgressService.cs" />
     <Compile Include="ViewModels\Commands\AsyncRelayCommand.cs" />
     <Compile Include="ViewModels\FlyoutViewModel.cs" />
     <Compile Include="ViewModels\Flyouts\SettingsViewModel.cs" />
